@@ -1,3 +1,8 @@
+2011-02-08  Alan Modra  <amodra@gmail.com>
+
+	* elf64-ppc.c (ppc64_elf_edit_toc): Don't segfault on NULL
+	local_syms when looking for local symbols in .toc.
+
 2011-02-01  Alan Modra  <amodra@gmail.com>
 
 	Backport from mainline
